# agent-memory-tck

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  conftest.py  pyproject.toml
.changeset/: README.md  config.json
.github/workflows/: client-tests.yml  docs.yml  tck-tests.yml  ts-publish.yml  ts-typedoc.yml
certifications/: registry.json  schema.json
clients/csharp/: Neo4j.AgentMemory.sln  README.md
clients/go/: README.md  go.mod
clients/go/conformance/: main.go
clients/go/memory/: auth.go  casing.go  casing_test.go  client.go  e2e_hosted_test.go  errors.go  integration_rest_test.go  longterm.go  mcp_handler.go  options.go  query.go  reasoning.go  shortterm.go  shortterm_test.go  tck_provenance_test.go  transport.go  transport_bridge.go  transport_rest.go  transport_rest_routes_test.go  types.go
clients/python/: README.md  pyproject.toml  pytest.ini
clients/python/neo4j_agent_memory_client/: __init__.py  _parse.py  casing.py  client.py  errors.py  transport.py  types.py
clients/python/neo4j_agent_memory_client/integrations/: __init__.py  langgraph.py  pydantic_ai.py
clients/python/tests/: conftest.py
clients/python/tests/e2e/: _tck_provenance.py  test_hosted_service.py
clients/python/tests/integration/: test_rest_transport.py
clients/python/tests/unit/: test_casing.py  test_parse.py  test_transport_routing.py
clients/rlang/: README.md
clients/rlang/conformance/: server.R
clients/rlang/neo4j.memory/: DESCRIPTION  NAMESPACE
clients/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsup.config.ts  typedoc.json  vitest.config.ts
clients/typescript/conformance/: server.ts
clients/typescript/examples/: README.md
clients/typescript/src/: client.ts  errors.ts  index.ts  observability.ts  types.ts  version.ts
demo/: README.md  seed-data.py
demo/agents/atlas/: Dockerfile  pyproject.toml
demo/agents/atlas/atlas/: graph.py  main.py
demo/agents/forge/: Dockerfile  go.mod  main.go
demo/agents/lenny/: Dockerfile  pyproject.toml
demo/agents/lenny/lenny/: agent.py  main.py  tools.py
demo/agents/rune/: Dockerfile  memory_helpers.R  plumber.R  tools.R
demo/dashboard/: package-lock.json  package.json
demo/infra/: compose.hosted.yml  docker-compose.yml  integration_test.py
docs/: Makefile  docinfo-header.html  index.adoc  style.css
docs/explanation/: architecture.adoc  memory-model.adoc  multi-agent-sharing.adoc
docs/how-to/: certification.adoc  ci-integration.adoc  cross-language-testing.adoc  langchain.adoc  mastra.adoc  mcp.adoc  observability.adoc  strands.adoc  troubleshooting.adoc  vercel-ai.adoc  writing-an-adapter.adoc
docs/reference/: base-adapter.adoc  bridge-protocol.adoc  compliance-tiers.adoc  mcp-tools.adoc  rest-api.adoc  scenario-registry.adoc
docs/tutorials/: first-typescript-agent.adoc  getting-started.adoc
tck/: __init__.py
tck/adapters/: __init__.py  base_adapter.py  http_bridge.py
tck/bridge/: protocol.md  reference_server.py
tck/fixtures/: data.py  mocks.py
tck/reference/: adapter.py
tck/registry/: scenario_ids.yaml  validator.py
tck/report/: compliance_report.py
tck/tests/: conftest.py
(+179 files in other folders)
