[project]
name = "atlas-agent"
version = "0.1.0"
description = "Orchestrator agent using LangGraph — reads all agents' reasoning traces"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
