[project]
name = "lenny-agent"
version = "0.1.0"
description = "Podcast research agent using PydanticAI — primary entity builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-ai>=0.1.0",
    "neo4j-agent-memory>=0.0.5",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
